--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -20,8 +20,8 @@
             android:id="@+id/back_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginLeft="12dp"
-            android:layout_alignParentLeft="true"
+            android:layout_marginRight="12dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@mipmap/ic_back"
             />
