--- a/app/src/main/res/layout/select_area.xml
+++ b/app/src/main/res/layout/select_area.xml
@@ -10,14 +10,14 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
         <TextView
-            android:id="@+id/title_text"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="20sp"/>
         <Button
-            android:id="@+id/back_button"
+            android:id="@+id/bt_back"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginRight="12dp"
